testsuite/tests/grammar/invalid_lexers/pattern_6.lkt
import common

lexer foo_lexer {
    example <- p"a)"
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
